fixed overlapping of posted donations in collectors view

--- a/app/static/css/dashboards/org_dashboard.css
+++ b/app/static/css/dashboards/org_dashboard.css
@@ -157,10 +157,7 @@
 
 .social-feed-box {
     border: 1px solid #d5d5d5;
-    background: rgb(232, 232, 232);
+    background: #fff;
     padding: 8px;
     border-radius: 5px;
-    /**/
-    box-shadow: 1px 1px 2px rgb(255, 255, 255), 0 0 25px rgb(207, 207, 207), 0 0 5px rgb(104, 104, 104);
-    color: #198754;
 }
